// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TagButton /> with \`big\` prop matches with snapshot 1`] = `
.c0 {
  min-height: 2.5rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.7901234567901234rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  border-radius: 0.25rem;
  border-width: 0.125rem;
  border-style: solid;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s,box-shadow 0.2s;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.7901234567901234rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-height: 3.125rem;
  min-width: 5rem;
  padding: 0 1.875rem;
  font-size: 0.8888888888888888rem;
  color: #222;
  border-color: #eee;
  background-color: #fff;
}

.c0:focus {
  box-shadow: 0 0 0 0.125rem #fff,0 0 0 0.25rem #bae8fd;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0:focus {
  border-color: #19b4fa;
}

.c0:hover {
  color: #fff;
  border-color: #05a8e6;
  background-color: #05a8e6;
}

.c0:active {
  color: #05a8e6;
  border-color: #05a8e6;
  background-color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    height: 2.5rem;
    width: 3.75rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    height: 3.125rem;
    width: 5rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<TagButton /> with \`modifier\` prop matches with snapshot 1`] = `
.c0 {
  min-height: 2.5rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.7901234567901234rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  border-radius: 0.25rem;
  border-width: 0.125rem;
  border-style: solid;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s,box-shadow 0.2s;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.7901234567901234rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  color: #222;
  border-color: #eee;
  background-color: #fff;
}

.c0:focus {
  box-shadow: 0 0 0 0.125rem #fff,0 0 0 0.25rem #bae8fd;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0:focus {
  border-color: #19b4fa;
}

.c0:hover {
  color: #fff;
  border-color: #05a8e6;
  background-color: #05a8e6;
}

.c0:active {
  color: #05a8e6;
  border-color: #05a8e6;
  background-color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    height: 2.5rem;
    width: 3.75rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<TagButton /> with \`selected\` prop matches with snapshot 1`] = `
.c0 {
  min-height: 2.5rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.7901234567901234rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  border-radius: 0.25rem;
  border-width: 0.125rem;
  border-style: solid;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s,box-shadow 0.2s;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.7901234567901234rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  color: #222;
  border-color: #eee;
  background-color: #fff;
  color: #fff;
  border-color: #19b4fa;
  background-color: #19b4fa;
}

.c0:focus {
  box-shadow: 0 0 0 0.125rem #fff,0 0 0 0.25rem #bae8fd;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0:focus {
  border-color: #19b4fa;
}

.c0:hover {
  color: #fff;
  border-color: #05a8e6;
  background-color: #05a8e6;
}

.c0:active {
  color: #05a8e6;
  border-color: #05a8e6;
  background-color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    height: 2.5rem;
    width: 3.75rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<TagButton /> with \`tiny\` prop matches with snapshot 1`] = `
.c0 {
  min-height: 2.5rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.7901234567901234rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  border-radius: 0.25rem;
  border-width: 0.125rem;
  border-style: solid;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s,box-shadow 0.2s;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.7901234567901234rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  min-height: 1.875rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.7901234567901234rem;
  color: #222;
  border-color: #eee;
  background-color: #fff;
}

.c0:focus {
  box-shadow: 0 0 0 0.125rem #fff,0 0 0 0.25rem #bae8fd;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0:focus {
  border-color: #19b4fa;
}

.c0:hover {
  color: #fff;
  border-color: #05a8e6;
  background-color: #05a8e6;
}

.c0:active {
  color: #05a8e6;
  border-color: #05a8e6;
  background-color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    height: 2.5rem;
    width: 3.75rem;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    height: 2.5rem;
    width: 3.75rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<TagButton /> with icon matches with snapshot 1`] = `
.c0 {
  min-height: 2.5rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.7901234567901234rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  border-radius: 0.25rem;
  border-width: 0.125rem;
  border-style: solid;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s,box-shadow 0.2s;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.7901234567901234rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  color: #222;
  border-color: #eee;
  background-color: #fff;
  color: #222;
  border-color: #eee;
  background-color: #fff;
}

.c0:focus {
  box-shadow: 0 0 0 0.125rem #fff,0 0 0 0.25rem #bae8fd;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0:focus {
  border-color: #19b4fa;
}

.c0:hover {
  color: #fff;
  border-color: #05a8e6;
  background-color: #05a8e6;
}

.c0:active {
  color: #05a8e6;
  border-color: #05a8e6;
  background-color: #fff;
}

.c0:focus {
  border-color: #19b4fa;
}

.c0:hover {
  color: #fff;
  border-color: #05a8e6;
  background-color: #05a8e6;
}

.c0:active {
  color: #05a8e6;
  border-color: #05a8e6;
  background-color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    height: 2.5rem;
    width: 3.75rem;
  }
}

<button
  className="c0"
>
  <svg
    viewBox="0 0 732 224.43"
    width="36"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      Visa
    </title>
    <path
      d="M257.87 221.21L294.93 3.77h59.26l-37.08 217.44h-59.24zM532.06 9.13A152.88 152.88 0 0 0 478.94 0c-58.56 0-99.81 29.49-100.16 71.72-.33 31.24 29.45 48.67 51.93 59.07 23.07 10.65 30.82 17.45 30.71 27-.15 14.57-18.42 21.23-35.46 21.23-23.72 0-36.32-3.29-55.79-11.41l-7.64-3.46-8.32 48.67c13.84 6.07 39.44 11.33 66 11.61 62.3 0 102.74-29.15 103.2-74.28.22-24.74-15.57-43.56-49.76-59.08-20.71-10.06-33.4-16.77-33.27-27 0-9 10.74-18.7 33.94-18.7a109.19 109.19 0 0 1 44.39 8.35l5.31 2.5 8-47.12zM684 3.98h-45.8c-14.19 0-24.8 3.88-31 18l-88 199.25h62.23s10.18-26.79 12.48-32.67c6.8 0 67.26.09 75.9.09 1.78 7.61 7.21 32.58 7.21 32.58h55L684 3.98m-73 140.15c4.9-12.53 23.61-60.78 23.61-60.78-.35.57 4.86-12.59 7.86-20.75l4 18.74s11.34 51.91 13.72 62.79H611zM208.17 3.93l-58 148.27-6.17-30.12c-10.84-34.74-44.49-72.36-82.12-91.21l53.06 190.15 62.7-.07 93.3-217h-62.77z"
      fill="#004686"
    />
    <path
      d="M96.32 3.8H.76L0 8.33c74.35 18 123.54 61.49 144 113.75l-20.82-99.92c-3.59-13.77-14-17.87-26.86-18.36z"
      fill="#ef9b11"
    />
  </svg>
</button>
`;

exports[`<TagButton /> with text matches with snapshot 1`] = `
.c0 {
  min-height: 2.5rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.7901234567901234rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  border-radius: 0.25rem;
  border-width: 0.125rem;
  border-style: solid;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s,box-shadow 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s,box-shadow 0.2s;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.7901234567901234rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  cursor: pointer;
  color: #222;
  border-color: #eee;
  background-color: #fff;
}

.c0:focus {
  box-shadow: 0 0 0 0.125rem #fff,0 0 0 0.25rem #bae8fd;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0:focus {
  border-color: #19b4fa;
}

.c0:hover {
  color: #fff;
  border-color: #05a8e6;
  background-color: #05a8e6;
}

.c0:active {
  color: #05a8e6;
  border-color: #05a8e6;
  background-color: #fff;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c0 {
    height: 2.5rem;
    width: 3.75rem;
  }
}

<button
  className="c0"
>
  MyButton
</button>
`;
